--- a/src/components/UploadsList.scss
+++ b/src/components/UploadsList.scss
@@ -11,6 +11,16 @@
   &:last-child {
     margin-bottom: 0;
   }
+  &.isUploading {
+    opacity:0.25;
+    border-right: 5px solid #ccc;
+  }
+  &.isUploaded {
+    border-right: 5px solid forestgreen;
+  }
+  &.hasError {
+    border-right: 5px solid darkred;
+  }
 }
 
 .in-gallery__file-summary {
