--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -22,37 +22,15 @@ html, body {
   // @include foundation-typography;
   @import '../../components/UploadsList';
   @import '../../components/UploadPhotos';
+  @import '../../components/Photo';
+  @import '../../components/Photos';
 }
 
 .in-gallery {
-
+  background-color: #f5f5f5;
   padding: 30px 15px;
 }
 
-.in-gallery_photo {
-  display: inline-block;
-  box-shadow: 0 0 2px rgba(0, 0, 0, 0.33);
-  background-color: #fff;
-  margin: 5px;
-  padding: 5px;
-  border-radius: 3px;
-}
-
-.in-gallery_photo-title {
-  padding-bottom: 5px;
-  color: #666;
-}
-
-.in-gallery_photo-img {
-  display: block;
-  height: 100px;
-  width: auto;
-  border-radius: 2px;
-}
-
-.in-gallery_photo-link {
-  display: block;
-}
 
 #uploadified_metabox_photos_R {
   .button-link {
