--- a/src/components/UploadPhotos.scss
+++ b/src/components/UploadPhotos.scss
@@ -20,3 +20,41 @@
     color: #fff;
   }
 }
+
+.in-gallery__upload-controls {
+  padding: 15px 0;
+}
+
+.in-gallery__upload-progress {
+  position: relative;
+  width: 100%;
+  height: 10px;
+  border-radius: 3px;
+  box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
+}
+
+.in-gallery__upload-progress-bar {
+  position: relative;
+  top: 1px;
+  left: 1px;
+  height: 8px;
+  border-radius: 2px;
+  background-color: forestgreen;
+  transition: 0.5s width;
+}
+
+.in-gallery__upload-browse-button {
+  width: 200px;
+  margin: 15px auto;
+  font-size: 1rem;
+  padding: 7px 15px;
+  border: none;
+  border-radius: 2px;
+  cursor: pointer;
+  background-color: darkslategrey;
+  color: #fff;
+  text-align: center;
+  > input {
+    display: none;
+  }
+}
