--- a/src/components/UploadPhotos.scss
+++ b/src/components/UploadPhotos.scss
@@ -51,7 +51,7 @@
   border: none;
   border-radius: 2px;
   cursor: pointer;
-  background-color: darkslategrey;
+  background-color: mediumseagreen;
   color: #fff;
   text-align: center;
   > input {
