--- a/src/components/Photo.scss
+++ b/src/components/Photo.scss
@@ -1,3 +1,33 @@
+.in-gallery_photo-img {
+  width: 100%;
+  height: auto;
+  border-radius: 2px;
+  position: relative;
+}
+
+@media all and (min-width: 640px) {
+  .in-gallery_photo-img {
+    top: 50%;
+    transform: translateY(-50%);
+    box-shadow: 0 0 11px rgba(255, 255, 255, 0.15);
+  }
+
+  .in-gallery_photo-column {
+    background-color: #23282d;
+  }
+}
+
+@media all and (max-width: 639px) {
+  .in-gallery_photo-img {
+    top: 0;
+    transform: none;
+    box-shadow: none;
+  }
+  .in-gallery_photo-column {
+    background-color: #fff;
+  }
+}
+
 .in-gallery_photo {
   display: block;
   background-color: #fff;
@@ -11,18 +41,6 @@
   color: #666;
   text-transform: uppercase;
   font-size: 14px;
-}
-
-.in-gallery_photo-img {
-  width: 100%;
-  height: auto;
-  border-radius: 2px;
-
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-
-  box-shadow: 0 0 11px rgba(255, 255, 255, 0.15);
 }
 
 .in-gallery_photo-link {
@@ -40,9 +58,6 @@
   color: #999;
 }
 
-.in-gallery_photo-column {
-  background-color: #23282d;
-}
 .in-gallery_info-column {
   display: flex;
   flex-direction: column;
@@ -50,11 +65,31 @@
 }
 
 .in-gallery_photo-controls {
-  padding: 10px;
   text-align: right;
   flex-grow: 0;
 }
 
 .in-gallery_photo-description {
   padding-bottom: 10px;
+}
+
+.in-gallery__button-link {
+  cursor: pointer;
+  position: relative;
+  display: inline-block;
+  margin-right: 12px;
+  font-size: 14px;
+  > img {
+    height: 17px;
+    width: auto;
+    position: relative;
+    top: 4px;
+    margin-right: 2px;
+  }
+  &.delete, &.cancel {
+    color: #666;
+    > img {
+      opacity: 0.5;
+    }
+  }
 }
