feat: minor change to check if automated deployment works correctly

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -35,6 +35,8 @@ html, body {
     text-align: center;
     padding: 8px 0;
     background-color: #c3c5c9;
+    border: 1px solid #ccc;
+    border-radius: 2px;
     > a {
       color: #fff;
       text-decoration: none;
