--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -4,7 +4,7 @@
 // @include foundation-forms;
 // @include foundation-typography;
 @import "vars";
-@import "flexModal";
+@import "../../components/FlexModal/FlexModal";
 
 html, body {
   height: 100%;
