feat: add Loader style

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -25,6 +25,7 @@ html, body {
   @import '../../components/Photo';
   @import '../../components/Photos';
   @import "../../components/FlexModal/FlexModal";
+  @import "../../components/Loader/Loader";
 
   * {
     box-sizing: border-box;
